--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,3 +2,7 @@
 name = "my-flask-app"
 version = "1.0.0"
 requires-python = ">=3.11,<3.12"
+
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
